Fix issue with Ticket Content overflowing.

--- a/src/styles/components/_ticket.sass
+++ b/src/styles/components/_ticket.sass
@@ -15,9 +15,6 @@
 		z-index:    400 !important
 		box-shadow: 0px 0px 8px $dove-gray
 
-	// &.last-active
-	// 	z-index: 375 !important
-
 	border:        1px solid $gallery
 	border-radius: 2px
 
@@ -32,5 +29,6 @@
 		border-top-right-radius: 2px
 
 	.content
+		height:   76px
 		margin:   8px
 		overflow: hidden
